--- a/fish_classifier_2-1.ipynb
+++ b/fish_classifier_2-1.ipynb
@@ -47,7 +47,7 @@
     "index = np.arange(49)\n",
     "np.random.shuffle(index)\n",
     "\n",
-    "train_input = input_arr[index[:35]]\n",
+    "train_input = input_arr[index[:35]] # 넘파이 배열 인덱싱 기능 \n",
     "train_target = target_arr[index[:35]]\n",
     "test_input = input_arr[index[35:]]\n",
     "test_target = target_arr[index[35:]]\n",
