--- a/fish_logistic_multi_regression_4-1.ipynb
+++ b/fish_logistic_multi_regression_4-1.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/n4/6862vcys3dv1mf499jzrwz300000gn/T/ipykernel_39415/1767664493.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "fish = pd.read_csv('https://bit.ly/fish_csv_data')\n",
@@ -27,21 +42,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9327731092436975\n",
+      "0.925\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "lr = LogisticRegression(C=20, max_iter=1000)\n",
     "\n",
     "lr.fit(train_scaled, train_target)\n",
-    "print(lr.score(train_scaled, train_target))\n"
+    "print(lr.score(train_scaled, train_target))\n",
+    "print(lr.score(test_scaled, test_target))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Perch' 'Smelt' 'Pike' 'Roach' 'Perch']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lr.predict(test_scaled[:5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.    0.014 0.842 0.    0.135 0.007 0.003]\n",
+      " [0.    0.003 0.044 0.    0.007 0.946 0.   ]\n",
+      " [0.    0.    0.034 0.934 0.015 0.016 0.   ]\n",
+      " [0.011 0.034 0.305 0.006 0.567 0.    0.076]\n",
+      " [0.    0.    0.904 0.002 0.089 0.002 0.001]]\n",
+      "['Bream' 'Parkki' 'Perch' 'Pike' 'Roach' 'Smelt' 'Whitefish']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "proba = lr.predict_proba(test_scaled[:5])\n",
+    "print(np.round(proba, decimals=3))\n",
+    "\n",
+    "print(lr.classes_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7, 5) (7,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lr.coef_.shape, lr.intercept_.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ -6.51   1.04   5.17  -2.76   3.34   0.35  -0.63]\n",
+      " [-10.88   1.94   4.78  -2.42   2.99   7.84  -4.25]\n",
+      " [ -4.34  -6.24   3.17   6.48   2.36   2.43  -3.87]\n",
+      " [ -0.69   0.45   2.64  -1.21   3.26  -5.7    1.26]\n",
+      " [ -6.4   -1.99   5.82  -0.13   3.5   -0.09  -0.7 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "decision = lr.decision_function(test_scaled[:5])\n",
+    "print(np.round(decision, decimals=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.    0.014 0.842 0.    0.135 0.007 0.003]\n",
+      " [0.    0.003 0.044 0.    0.007 0.946 0.   ]\n",
+      " [0.    0.    0.034 0.934 0.015 0.016 0.   ]\n",
+      " [0.011 0.034 0.305 0.006 0.567 0.    0.076]\n",
+      " [0.    0.    0.904 0.002 0.089 0.002 0.001]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.special import softmax\n",
+    "proba = softmax(decision, axis=1)\n",
+    "print(np.round(proba, decimals=3))"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
